Correcao do backending, criacao do exceptions, adequacao as diretrizes do projeto

--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="D:/Users/Lidio Cruz/Documentos/Eclipse/flatlaf-3.6.jar"/>
+	<classpathentry kind="lib" path="C:\Users\Carpeaux\Desktop\Trabalhos\OOP-Project\flatlaf-3.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
